# gmail-labeler

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  restart.command  restart.ps1  setup-tray.command  setup-tray.ps1  setup.command  setup.ps1  start.command  start.ps1  stop.command  stop.ps1  uninstall-tray.command  uninstall-tray.ps1  uninstall.command  uninstall.ps1
.claude/agents/: quicklabel-add-action.md  quicklabel-debug-proposal.md  quicklabel-qa.md
docs/: google-cloud-setup.md  quicklabel-e2e-testing.md  quicklabel-manual-qa.md
scripts/: quicklabel_e2e.py  quicklabel_filter_smoke.py  quicklabel_intel_smoke.py  quicklabel_queue_e2e.py
src/lib/: config.py  gmail_client.py  ollama_client.py
src/quicklabel/: README.md  __init__.py  __main__.py  _logging.py  actions.py  auth.py  body.py  (+19 more)
tests/: test_quicklabel_actions.py  test_quicklabel_body.py  test_quicklabel_bookmarklet.py  test_quicklabel_edge_cases.py  test_quicklabel_gmail_id.py  test_quicklabel_headers.py  test_quicklabel_intelligence.py  test_quicklabel_label_status.py  test_quicklabel_llm_status.py  test_quicklabel_logging.py  test_quicklabel_preflight.py  test_quicklabel_proposal.py  test_quicklabel_scan.py  test_quicklabel_security.py  test_quicklabel_server_queue.py  test_quicklabel_service.py  test_quicklabel_settings.py  test_quicklabel_setup.py  test_quicklabel_signals.py  test_quicklabel_smart_heuristic.py  test_quicklabel_smoke.py  test_quicklabel_storage.py  test_quicklabel_token_store.py  test_quicklabel_tray.py  test_quicklabel_undo.py
(+15 files in other folders)
